<?xml version="1.0"?>
<package format="3">
  <name>annin_ar4_joystick_servo</name>
  <version>1.0.0</version>
  <description>
    Examples of different ways to control the AR4 robot using ROS2.
  </description>
  <license>MIT</license>

  <author>Yifei Cheng</author>
  <maintainer email="ycheng517@gmail.com">Yifei Cheng</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>annin_ar4_moveit_config</exec_depend>
  <exec_depend>annin_ar4_description</exec_depend>
  <exec_depend>launch_param_builder</exec_depend>
  <exec_depend>moveit_servo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
